chore: edit package.json.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "typescript-review",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Typescript-based sales order management system with DDD principles.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "npm run build && node dist/index.js"
   },
+  "keywords": [
+    "typescript",
+    "ddd",
+    "sales-order",
+    "management",
+    "domain-driven-design"
+  ],
+  "author": "Open-Source Applications Development Team",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.5.3"
